# utilitylib

./: CMakeLists.txt
include/bytes/: buffer.h  byte_strategy.h  serialize.h
include/containers/: circular_buffer.h  safe_queue.h
include/networking/: address.h  networking.h  socket.h  tcp_socket.h  udp_socket.h
include/networking/tcp/: connection.h  connection_manager.h  listener.h  tcp.h
include/networking/udp/: socket.h  udp.h
source/: main.cpp
source/bytes/: buffer.cpp
source/networking/: address.cpp  socket.cpp  tcp_socket.cpp  udp_socket.cpp
source/networking/posix/: socket_definitions.h
source/networking/tcp/: connection.cpp  connection_manager.cpp  listener.cpp
source/networking/udp/: socket.cpp
source/networking/win32/: socket_definitions.h
tests/: address.cpp
tests/bytes/: serialization.cpp
tests/networking/: address.cpp
